--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -440,6 +440,7 @@ app/serializers/supporting_evidence_attachment_serializer.rb @department-of-vete
 app/serializers/tracking_serializer.rb @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/serializers/triage_team_serializer.rb @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/serializers/user_serializer.rb @department-of-veterans-affairs/vsp-identity
+app/serializers/user_verification_serializer.rb @department-of-veterans-affairs/vsp-identity
 app/serializers/valid_va_file_number_serializer.rb @department-of-veterans-affairs/vfs-authenticated-experience-backend @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/serializers/zipcodes_serializer.rb @department-of-veterans-affairs/vfs-facilities-frontend @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 app/services/acceptable_verified_credential_adoption_service.rb @department-of-veterans-affairs/vsp-identity
@@ -1626,6 +1627,7 @@ spec/serializers/sign_in @department-of-veterans-affairs/vsp-identity
 spec/serializers/sign_in/introspect_serializer_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/serializers/triage_team_serializer_spec.rb @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 spec/serializers/user_serializer_spec.rb @department-of-veterans-affairs/vsp-identity
+spec/serializers/user_verification_serializer.rb @department-of-veterans-affairs/vsp-identity
 spec/services/acceptable_verified_credential_adoption_service_spec.rb @department-of-veterans-affairs/vsp-identity
 spec/services/bgs  @department-of-veterans-affairs/Benefits-Team-1 @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
 spec/services/claim_fast_tracking @department-of-veterans-affairs/Disability-Experience @department-of-veterans-affairs/va-api-engineers @department-of-veterans-affairs/backend-review-group
