--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-password}"
       POSTGRES_USER: "${POSTGRES_USER:-postgres}"
       PGDATA: /tmp
-    image: postgis/postgis:14-3.3-alpine
+    image: mdillon/postgis:11-alpine
     ports:
       - 54320:5432
     volumes:
