--- a/.github/workflows/income-limits-data-sync.yml
+++ b/.github/workflows/income-limits-data-sync.yml
@@ -1,40 +1,41 @@
 name: Income Limits Data Sync
-
 on:
   push:
   workflow_dispatch: null
-
 jobs:
-  query_oracle:
+  income_limits_data_sync:
     runs-on: self-hosted
+    container:
+      image: public.ecr.aws/docker/library/ruby:3.2.2-bullseye
+      env:
+        SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
+      ports:
+        - 80
+      volumes:
+        - my_docker_volume:/home/runner
+        - /etc/ssl/certs:/etc/ssl/certs
+      options: --cpus 1
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-
-    - name: Install Oracle Instant Client Libraries
-      run: |
-        pwd
-        cd /opt
-        sudo mkdir /opt/oracle
-        cd /opt/oracle
-        sudo curl https://download.oracle.com/otn_software/linux/instantclient/2112000/instantclient-basic-linux.x64-21.12.0.0.0dbru.zip -o /opt/oracle/instantclient-basic-linux.x64-21.12.0.0.0dbru.zip
-        sudo curl https://download.oracle.com/otn_software/linux/instantclient/2112000/instantclient-sdk-linux.x64-21.12.0.0.0dbru.zip -o /opt/oracle/instantclient-sdk-linux.x64-21.12.0.0.0dbru.zip
-        sudo unzip instantclient-basic-linux.x64-21.12.0.0.0dbru.zip
-        sudo unzip instantclient-sdk-linux.x64-21.12.0.0.0dbru.zip
-        sudo apt update
-        sudo apt install libaio1
-        sudo sh -c "echo /opt/oracle/instantclient_21_12 > /etc/ld.so.conf.d/oracle-instantclient.conf"
-        sudo ldconfig
-        cd $GITHUB_WORKSPACE
-
-
-    - name: Install Dependencies
-      run: |
-        gem install ruby-oci8
-        gem install csv
-
-    - name: Run Oracle Query
-      run: ruby .github/scripts/income-limits-data-sync.rb
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Install Oracle Instant Client Libraries
+        run: |
+          pwd
+          cd /opt
+          mkdir -p /opt/oracle
+          cd /opt/oracle
+          curl https://download.oracle.com/otn_software/linux/instantclient/2112000/instantclient-basic-linux.x64-21.12.0.0.0dbru.zip -o /opt/oracle/instantclient-basic-linux.x64-21.12.0.0.0dbru.zip
+          curl https://download.oracle.com/otn_software/linux/instantclient/2112000/instantclient-sdk-linux.x64-21.12.0.0.0dbru.zip -o /opt/oracle/instantclient-sdk-linux.x64-21.12.0.0.0dbru.zip
+          unzip instantclient-basic-linux.x64-21.12.0.0.0dbru.zip
+          unzip instantclient-sdk-linux.x64-21.12.0.0.0dbru.zip
+          apt update
+          apt install libaio1
+          sh -c "echo /opt/oracle/instantclient_21_12 > /etc/ld.so.conf.d/oracle-instantclient.conf"
+          ldconfig
+          cd $GITHUB_WORKSPACE
+      - name: Install Dependencies
+        run: |
+          gem install ruby-oci8
+          gem install csv
+      - name: Run Oracle Query
+        run: ruby .github/scripts/income-limits-data-sync.rb
