--- a/config/features.yml
+++ b/config/features.yml
@@ -1269,6 +1269,9 @@ features:
   pension_form_enabled:
     actor_type: user
     description: Enable the pension form
+  pension_claim_submission_to_lighthouse:
+    actor_type: user
+    description: Pension claim submission uses Lighthouse API
   veteran_status_updated:
     actor_type: user
     description: Enable the veteran post-emis status
