--- a/config/features.yml
+++ b/config/features.yml
@@ -1279,3 +1279,6 @@ features:
   virtual_agent_enable_param_error_detection:
     actor_type: user
     description: If enabled, Allows for the detection of errors in the chatbot params
+  vye_request_allowed:
+    actor_type: user
+    description: Master toggle for the VYE feature
