7528: add upcoming days limit to appointments meta and update docs

--- a/modules/mobile/docs/schemas/Appointments.yml
+++ b/modules/mobile/docs/schemas/Appointments.yml
@@ -14,6 +14,7 @@ properties:
       - minutesCheckinEarlyWindow
       - minutesCheckinLateWindow
       - upcomingAppointmentsCount
+      - upcomingDaysLimit
     properties:
       errors:
         type: [array, null]
@@ -31,4 +32,9 @@ properties:
             example: 15
       upcomingAppointmentsCount:
         type: number
+        description: The number of BOOKED, non-pending appointments in the next upcomingDaysLimit number of days.
         example: 3
+      upcomingDaysLimit:
+        type: number
+        description: The number of days into the future used for calculating upcomingAppointmentsCount. The current value is 14.
+        example: 14
