--- a/.github/workflows/check-git-log.yml
+++ b/.github/workflows/check-git-log.yml
@@ -19,9 +19,13 @@ jobs:
       run: |
         LOG=$(git log --all --oneline -- spec/support/vcr_cassettes/emis)
         if [ -n "$LOG" ]; then
+          echo "$LOG" | awk '{print $1}' > bad-shas.txt
           echo "EMIs Cassettes found in git history"
-          echo "Git log output:"
-          echo "$LOG"
+          echo "Commits and associated branch"
+          for sha in $(cat bad-shas.txt); do
+            echo $sha
+            git branch -r --contains $sha;
+          done
           exit 1
         fi
 
@@ -64,6 +68,6 @@ jobs:
         with:
           slack_app_token: ${{ env.SLACK_APP_TOKEN }}
           slack_bot_token: ${{ env.SLACK_BOT_TOKEN }}
-          message: "GH Workflow failed: ${{ matrix.build_location }}"
+          message: "GH Workflow failed: EMIS Cassettes Git History"
           blocks: "[{\"type\": \"divider\"}, {\"type\": \"section\", \"text\": { \"type\": \"mrkdwn\", \"text\": \":scared_and_sweating_smiley: GitHub Action Runner Workflow failed! :scared_and_sweating_smiley:\n <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }} Run #${{ github.run_number }}>\"}}, {\"type\": \"divider\"}]"
           channel_id: "C039HRTHXDH"
