--- a/chart/templates/worker-deployment.yaml
+++ b/chart/templates/worker-deployment.yaml
@@ -88,7 +88,7 @@ spec:
 {{ toYaml .Values.worker.envSecrets | indent 12 }}
           {{- range $keys, $key := .Values.common.secrets }}
           {{- range $secrets, $secret := $key }}
-            - name: {{ $secret.env_var }}
+            - name: {{ upper $secret.name }}
               valueFrom:
                 secretKeyRef:
                   name: {{ $keys }}
