--- a/.github/workflows/income-limits-data-sync.yml
+++ b/.github/workflows/income-limits-data-sync.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: self-hosted
     container:
       image: public.ecr.aws/docker/library/ruby:3.2.2-bullseye
-      env:
+      # env:
         # SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
       ports:
         - 80
