--- a/.github/workflows/income-limits-data-sync.yml
+++ b/.github/workflows/income-limits-data-sync.yml
@@ -16,6 +16,7 @@ jobs:
       image: public.ecr.aws/docker/library/ruby:3.2.2-bullseye
       env:
         SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
+        NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
       ports:
         - 80
       volumes:
