1253 enable testing of microsoft pva (#14832)
* [#1253] Add a new microsoft direct line token endpoint

   Co-authored-by: Alex Person <alex.person@thoughtworks.com>

* [#1253] Adding feature flag for MSFT PVA testing

* [#1253] Update swagger and CODEOWNERS file for new swagger documentation

   Co-authored-by: Alex Person <alex.person@thoughtworks.com>

* [#1253] Update CODEOWNERS

   Co-authored-by: Alex Person <alex.person@thoughtworks.com>

---------

Co-authored-by: Aaron Young <aaron.young@thoughtworks.com>

--- a/config/features.yml
+++ b/config/features.yml
@@ -1282,3 +1282,6 @@ features:
   virtual_agent_enable_param_error_detection:
     actor_type: user
     description: If enabled, Allows for the detection of errors in the chatbot params
+  virtual_agent_enable_msft_pva_testing:
+    actor_type: user
+    description: If enabled, allows for connecting to MSFT PVA
