--- a/config/settings.yml
+++ b/config/settings.yml
@@ -706,6 +706,10 @@ connected_apps_api:
     api_key: ~
     revoke_url: https://sandbox-api.va.gov/internal/auth/v3/user/consent
 
+authorization_server_scopes_api:
+  auth_server:
+    url: https://sandbox-api.va.gov/internal/auth/v3/auth/scopes
+
 redis:
   host: localhost
   port: 6379
