--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -1131,6 +1131,7 @@ Rails/I18nLocaleTexts:
     - 'app/models/message.rb'
     - 'lib/evss/pciu/phone_number.rb'
     - 'lib/va_profile/models/communication_permission.rb'
+    - 'lib/va_profile/models/preferred_name.rb'
     - 'modules/claims_api/app/mailers/claims_api/unsuccessful_report_mailer.rb'
     - 'modules/covid_vaccine/app/models/covid_vaccine/v0/raw_expanded_form_data.rb'
     - 'modules/covid_vaccine/app/models/covid_vaccine/v0/raw_form_data.rb'
