--- a/config/features.yml
+++ b/config/features.yml
@@ -1268,6 +1268,9 @@ features:
   burial_form_enabled:
     actor_type: user
     description: Enable the burial form
+  burial_form_v2:
+    actor_type: user
+    description: Enable the burial form version 2
   pension_form_enabled:
     actor_type: user
     description: Enable the pension form
